Ultimas atualizaçõe nas classe controller